--- a/output.css
+++ b/output.css
@@ -865,6 +865,10 @@ video {
   max-width: 1200px;
 }
 
+.max-w-\[1000px\] {
+  max-width: 1000px;
+}
+
 .flex-shrink {
   flex-shrink: 1;
 }
@@ -2184,6 +2188,11 @@ video {
   line-height: 1.75rem;
 }
 
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -2781,5 +2790,31 @@ video {
     .dark\:lg\:hover\:\[paint-order\:markers\]:hover {
       paint-order: markers;
     }
+  }
+}
+
+@media print {
+  .print\:block {
+    display: block;
+  }
+
+  .print\:hidden {
+    display: none;
+  }
+
+  .print\:max-w-full {
+    max-width: 100%;
+  }
+
+  .print\:border-none {
+    border-style: none;
+  }
+
+  .print\:p-0 {
+    padding: 0px;
+  }
+
+  .print\:pb-0 {
+    padding-bottom: 0px;
   }
 }
