--- a/output.css
+++ b/output.css
@@ -1421,6 +1421,12 @@ video {
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.space-y-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+
 .space-y-reverse > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 1;
 }
@@ -2794,6 +2800,14 @@ video {
 }
 
 @media print {
+  .print\:mt-4 {
+    margin-top: 1rem;
+  }
+
+  .print\:mt-2 {
+    margin-top: 0.5rem;
+  }
+
   .print\:block {
     display: block;
   }
@@ -2806,6 +2820,18 @@ video {
     max-width: 100%;
   }
 
+  .print\:space-x-2 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+    margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .print\:space-y-2 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+  }
+
   .print\:border-none {
     border-style: none;
   }
@@ -2816,5 +2842,14 @@ video {
 
   .print\:pb-0 {
     padding-bottom: 0px;
+  }
+
+  .print\:font-serif {
+    font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+  }
+
+  .print\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 }
