--- a/input.css
+++ b/input.css
@@ -1,10 +1,1 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-  min-width: 0;
-}
+@import "tailwindcss";
